<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        style="@style/title"
        android:textSize="40sp"
        android:maxLength="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent" />

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/red_channel_wrapper"
    style="@style/channel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/red_channel"
    app:layout_constraintTop_toBottomOf="@id/description"
    app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/red_channel"
        android:digits="00123456789ABCDEFabcdef"
        android:maxLength="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/green_channel_wrapper"
        style="@style/channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/green_channel"
        app:layout_constraintTop_toBottomOf="@id/red_channel_wrapper"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/green_channel"
            android:digits="0123456789ABCDEFabcdef"
            android:maxLength="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/blue_channel_wrapper"
        style="@style/channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/blue_channel"
        app:layout_constraintTop_toBottomOf="@id/green_channel_wrapper"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/blue_channel"
            android:digits="0123456789ABCDEFabcdef"
            android:maxLength="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button"
        android:id="@+id/enter_button"
        android:text="@string/button_text"
        app:layout_constraintTop_toBottomOf="@id/blue_channel_wrapper"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/rgbcolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Created color display panel"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_button" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button"
        android:id="@+id/exit_button"
        android:text="Exit"
        app:layout_constraintTop_toBottomOf="@id/rgbcolor"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>